# Ascension-Core-OpenGL

./: CMakeLists.txt  Common.h  README.md  main.cpp
Core classes/: Clock.h  Console.h  Engine.cpp  Engine.h  Renderer.h
Data Storage/: CacheOptimizedStorage.h  Pool.h  PoolItem.h  StorageItem.h
OpenGL classes and functions/: OpenGLMesh.cpp  OpenGLMesh.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Shader.cpp  Shader.h  Texture1D.cpp  Texture1D.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  VBO.cpp  VBO.h
OpenGL classes and functions/Core/: GLFWFunctions.h  OpenGLRenderMode.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RenderMode.h  Renderer.cpp  Renderer.h
OpenGL classes and functions/PostProcessing/: PostProcessing.cpp  PostProcessing.h
OpenGL classes and functions/RenderModes/: ForwardRenderMode.cpp  ForwardRenderMode.h  RenderModes.h
OpenGL classes and functions/Textures/: Texture1D.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h
Procedural Generation/: Mesh.cpp  Mesh.h  ProceduralMeshGeneration.cpp  ProceduralMeshGeneration.h  Vertex.cpp  Vertex.h
Procedural Generation/Vectors/: Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h
Shaders/: hdr_fragment.glsl
